Implementation Mapbox on Index parking'

--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -1,6 +1,8 @@
+.container-content-index {
+display: flex;
+}
+
 .container-parkings {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  width: 1200px;
+  width: 40%;
+
 }
