modifications card parking

--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -3,6 +3,9 @@ display: flex;
 }
 
 .container-parkings {
-  width: 40%;
-
+  width: 60vw;
+  background-color: #ffffff;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  border-radius: 16px;
+  margin: 8px;
 }
