--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,22 +1,36 @@
 .card-parking {
   height:auto;
-  margin: 10px;
-  background-color: #ffffff;
+  margin: 22px 8px;
+  display: flex;
+  align-items: center;
   border-radius: 8px;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
+.card-parking:hover {
+  background-color: rgba(220,220,220,0.3);
+  cursor: pointer;
+}
+// .card-parking-image {
+//   width: 480px;
+//   height: 280px;
+// }
 .card-parking img {
-  width: 100%;
-  height: 250px;
+  width: 480px;
+  height: 280px;
   object-fit: cover;
   border-radius: 8px;
 }
 
 .card-parking-infos {
-  padding: 8px;
+  padding: 24px;
 }
+
 .card-parking-infos h2 {
-  font-size: 24px;
-  font-weight: 600;
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.card-parking-infos h3 {
+  font-size: 16px;
+  font-weight: 400;
 }
