--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -3,16 +3,25 @@
   object-fit: cover;
   top: 0;
   height: 100vh;
-  width: 60%;
+  width: 40vw;
 }
 
 .marker {
-  width: 60px;
-  height: 22px;
+  width: 32px;
+  height: 32px;
   background-color: teal;
-  border-radius: 4px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: #ffffff;
-  text-align: center;
+  font-weight: 600;
+  padding: 20px;
+}
+
+.marker:hover {
+  background-color: #ffffff;
+  color: teal;
 }
 
 .mapboxgl-popup {
