--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -19,4 +19,17 @@
 .card-parking-infos h2 {
   font-size: 24px;
   font-weight: 600;
+  font-family: $all-fonts;
+}
+
+.card-image {
+  width: 1000px;
+  margin: 0 auto;
+  margin-top: 30px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.card-body {
+  margin-top: 40px;
+  margin: 0 auto;
 }
