--- a/app/views/parkings/show.html.erb
+++ b/app/views/parkings/show.html.erb
@@ -1,3 +1,22 @@
 <div class="card-image">
   <%= image_tag @parking.photo, crop: :fill, class: "img-fluid rounded-start" %>
 </div>
+
+<div class="my-container">
+  <div class="card-body">
+    <h1 class="card-title"><strong><%= @parking.title %></strong></h1>
+    <p class="card-text"><small class="text-muted"><%= @parking.price %> € par Jour</p>
+    <p class="card-text"><small class="text-muted"><%= @parking.description.capitalize %></small></p>
+  </div>
+</div>
+<div class="container">
+  <div class="form-wrapper" style="width: 400px; margin: 0 auto;">
+    <h2>Réservez votre place</h2>
+
+    <%= simple_form_for :search, method: "get" do |f| %>
+      <%= f.input :start_at, as: :string, required: false, input_html: {id: "range_start"} %>
+      <%= f.input :end_at, as: :string, required: false, input_html: {id: "range_end"} %>
+      <%= f.button :submit, "Réserver", class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
