--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -2,6 +2,11 @@
   width: 40px;
   border-radius: 50%;
 }
+
+.avatar:hover {
+  cursor: pointer;
+}
+
 .avatar-large {
   width: 56px;
   border-radius: 50%;
