--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,6 @@
 <div class='banner-home'>
-<h1>Location de parking entre particuliers</h1>
+  <h1>Location de parking entre particuliers</h1>
+    <div class="button-container">
+      <%= link_to "Nos parkings disponibles!", "/parkings", class: "btn btn-primary align-text-bottom" %>
+    </div>
 </div>
