Display price map"

--- a/app/views/parkings/_info_window.html.erb
+++ b/app/views/parkings/_info_window.html.erb
@@ -1,4 +1,4 @@
+<%= image_tag(address.parking.photo, class: "mapboxgl-popup-image") %>
 <h2><%= address.parking.title %></h2>
-<%= image_tag(address.parking.photo, width: '100%') %>
 <p><%= address.address %>,<br><%= address.post_code %> - <%= address.city %></p>
 <p><%= address.parking.price %> € par jour</p>
