--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -15,10 +15,9 @@
   justify-content: center;
   align-items: center;
   color: #ffffff;
-
   text-align: center;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  font-size: 8px;
+  font-size: 12px;
   font-weight: 600;
   padding: 20px;
 }
@@ -28,16 +27,15 @@
   color: teal;
 }
 
-.mapboxgl-popup {
-  max-width: 200px;
-  border-radius: 8px;
-}
 
 .mapboxgl-popup-content {
-  text-align: center;
   font-family: $all-fonts;
 }
 
 .mapboxgl-popup-content h2 {
   font-size: 18px;
+}
+
+.mapboxgl-popup-image {
+  width: 100%;
 }
