--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -49,3 +49,15 @@
   font-size: 16px;
   font-weight: 400;
 }
+
+.home-card-parking {
+  height: 200px;
+  width: 200px;
+  padding: 8px;
+  margin: 12px;
+}
+.home-card-parking img {
+  width: 200px;
+  height: 100px;
+  object-fit: cover;
+}
