--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,16 +1,23 @@
 .banner-home {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.8)), url('home-background.jpeg');
-  height: 100vh;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.4)), url('home-background-2.jpeg');
+  background-position: center;
+  height: 90vh;
   width: 100vw;
   background-size: cover;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  background-repeat: no-repeat;
 }
 
 .banner-home h1 {
   color: #ffffff;
   font-family: $all-fonts;
+}
 
-
+.banner-home-content {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
