--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -9,3 +9,12 @@ display: flex;
   border-radius: 16px;
   margin: 8px;
 }
+.container-home-parkings {
+  width: 100%;
+  height: auto;
+  background-color: #ffffff;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  border-radius: 16px;
+  margin: 8px;
+  display: flex;
+}
