--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -39,3 +39,27 @@
 .mapboxgl-popup-image {
   width: 100%;
 }
+
+.container-maps-cities {
+  display: flex;
+  margin: 0 auto;
+  align-items: center;
+  padding: 54px;
+}
+
+.container-maps-cities-content{
+  width: 50%;
+  padding: 32px;
+}
+
+.container-maps-cities-content h2{
+  font-size: 38px;
+  letter-spacing: 4px;
+}
+
+.maps-cities {
+  height: 480px;
+  min-width: 50%;
+  border-radius: 16px;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+}
