--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -51,13 +51,18 @@
 }
 
 .home-card-parking {
-  height: 200px;
-  width: 200px;
-  padding: 8px;
-  margin: 12px;
+  width: 420px;
+  margin: 12px 8px;
+  background-color: #ffffff;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
+
 .home-card-parking img {
-  width: 200px;
-  height: 100px;
+  width: 100%;
+  height: 200px;
   object-fit: cover;
+}
+
+.home-card-parking-infos {
+  padding: 8px;
 }
