--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -14,7 +14,7 @@ display: flex;
   height: auto;
   background-color: #ffffff;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  border-radius: 16px;
-  margin: 8px;
   display: flex;
+  justify-content: space-around;
+  margin-bottom: 64px;
 }
