--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,18 +18,18 @@
     data-mapbox-home-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
   </div>
 </div>
-<!-- <div class="container-home-parkings">
+<div class="container-home-parkings">
   <% @parkings.each do |parking| %>
     <div class="home-card-parking">
       <div class="home-card-parking-image">
         <%= image_tag(parking.photo) %>
       </div>
       <div class="home-card-parking-infos">
-        <h3><%= parking.title %></h3>
+        <h5><%= parking.title %></h5>
         <div class="short-line"></div>
-        <p><%= parking.description %></p>
+        <p><%= parking.address_parking.city %></p>
         <p><strong><%= parking.price %>€</strong>/jour</p>
       </div>
     </div>
   <% end %>
-</div> -->
+</div>
