--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -12,8 +12,7 @@ display: flex;
 .container-home-parkings {
   width: 100%;
   height: auto;
-  background-color: #ffffff;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  background-color: #f4f4f4;
   display: flex;
   justify-content: space-around;
   margin-bottom: 64px;
