--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,10 +1,11 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+  background: #fff;
   position: sticky;
   top: 0;
   height: 10vh;
   z-index: 1;
+
 }
 
 .navbar-lewagon .navbar-collapse {
