--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -28,7 +28,7 @@
 .card-parking-infos h2 {
   font-size: 24px;
   font-weight: 600;
-  font-family: $all-fonts;
+  font-family: $poppins;
 }
 
 .card-image {
