--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
     <h1>Location de parking entre particuliers</h1>
     <div class="button-container">
       <%= link_to "Nos parkings disponibles!", parkings_path, class: "btn btn-primary align-text-bottom" %>
-     <input type="file" accept="image/*"/>
+     <%# <input type="file" accept="image/*"/> %>
     </div>
 </div>
 <div class="container-maps-cities">
