--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class='banner-home'>
+<div class='banner-home container'>
   <div class="banner-home-content">
     <h1>Location de parking entre particuliers</h1>
     <div class="button-container">
@@ -6,7 +6,7 @@
      <%# <input type="file" accept="image/*"/> %>
     </div>
 </div>
-<div class="container-maps-cities">
+<div class="container-maps-cities d-none d-sm-block">
   <div class="container-maps-cities-content">
     <h2>Retrouvez nos parkings partout en France !</h2>
     <div class="search-bar">
@@ -20,7 +20,7 @@
 </div>
 
 <!-- Slider main container -->
-<div class="swiper"
+<div class="swiper d-none d-sm-block"
      data-controller="swiper"
      data-swiper-target="container">
   <!-- Additional required wrapper -->
