--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -65,3 +65,9 @@
 .home-card-parking-infos {
   padding: 8px;
 }
+
+@media (max-width: 767.98px) {
+  .card-parking img {
+    width: 100%;
+  }
+ }
