--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -6,6 +6,14 @@
   width: 40vw;
 }
 
+@media (max-width: 767.98px) {
+  #map {
+    display: none;
+  }
+
+   }
+
+
 .marker {
   width: 32px;
   height: 32px;
