--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -25,7 +25,7 @@
                   input_html: { autocomplete: "current-password" } %>
     </div>
 
-    <div class="form-actions">
+    <div class="form-actions text-center">
       <%= f.button :submit, "Update" %>
     </div>
   <% end %>
