[+][UPD][PARKEASY]diferents changes (homepage,index,show)

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class='banner-home container'>
+<div class='banner-home'>
   <div class="banner-home-content">
     <h1>Location de parking entre particuliers</h1>
     <div class="button-container">
