--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -30,11 +30,19 @@
 }
 
 .card-image {
-  width: 1000px;
   margin: 0 auto;
   margin-top: 30px;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  object-fit: cover;
+  height: 100%;
 }
+
+@media (max-width: 767.98px) {
+  .card-image {
+    width: 100%;
+  }
+ }
+
+
 
 .card-body {
   margin-top: 40px;
