--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,14 +2,14 @@
   <div class="banner-home-content">
     <h1>Location de parking entre particuliers</h1>
     <div class="button-container">
-      <%= link_to "Nos parkings disponibles!", parkings_path, class: "btn btn-primary align-text-bottom" %>
+      <%= link_to "Nos parkings disponibles!", parkings_path, class:" btn-homepage btn btn-primary align-text-bottom" %>
      <%# <input type="file" accept="image/*"/> %>
     </div>
 </div>
 <div class="container-maps-cities d-none d-sm-block">
   <div class="container-maps-cities-content">
     <h2>Retrouvez nos parkings partout en France !</h2>
-    <div class="search-bar">
+    <div class="search-bar" type="input">
     Renseigner une ville
     </div>
   </div>
