--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,9 +9,10 @@
 <div class="container-maps-cities d-none d-sm-block">
   <div class="container-maps-cities-content">
     <h2>Retrouvez nos parkings partout en France !</h2>
-    <div class="search-bar" type="input">
-    Renseigner une ville
-    </div>
+   <div class="input-group">
+  <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
+  <button type="button" class="btn btn-outline-primary">search</button>
+</div>
   </div>
   <div class="maps-cities"
     data-controller="mapbox-home"
