--- a/app/views/parkings/show.html.erb
+++ b/app/views/parkings/show.html.erb
@@ -1,5 +1,5 @@
 <div class="card-image text-center">
-  <%= image_tag @parking.photo, crop: :fill, class: "img-fluid rounded-start" %>
+  <%= image_tag @parking.photos[0], crop: :fill, class: "img-fluid rounded-start" %>
 </div>
 
 <div class="my-container">
