--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: #fff;
+  background: rgba(255, 255, 255, 0);
   position: sticky;
   top: 0;
   height: 10vh;
