--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,6 +5,9 @@
     <% end %>
   <div class="links-navbar-desktop d-none d-lg-block ">
     <ul class="navbar-links h-100">
+      <li class="nav-item active">
+            <%= link_to "Ajouter un Parking", new_parking_path, class: "nav-link" %>
+          </li>
       <li class="search-parking h-100">Trouvez un parking</li>
       <li class="rent-parking h-100">Louer votre parking</li>
       <li class="faq h-100">FAQ</li>
